// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm Component should match snapshot 1`] = `
<div>
  <Row
    tag="div"
  >
    <input
      name="username"
      onChange={[Function]}
      type="text"
      value="demo"
    />
  </Row>
  <Row
    tag="div"
  >
    <input
      name="password"
      onChange={[Function]}
      type="password"
      value="qwerty"
    />
  </Row>
  <Row
    tag="div"
  >
    <button
      onClick={[Function]}
    >
      Login
    </button>
  </Row>
</div>
`;

exports[`LoginForm Component should match snapshot with error message 1`] = `
<div>
  <span>
    Invalid credentials!
  </span>
  <Row
    tag="div"
  >
    <input
      name="username"
      onChange={[Function]}
      type="text"
      value="demo"
    />
  </Row>
  <Row
    tag="div"
  >
    <input
      name="password"
      onChange={[Function]}
      type="password"
      value="qwerty"
    />
  </Row>
  <Row
    tag="div"
  >
    <button
      onClick={[Function]}
    >
      Login
    </button>
  </Row>
</div>
`;
